# scribe

./: .gitignore  404.html  MANIFEST  README.md  flake.nix  icon.xcf  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
backends/: index.html
cli/: index.html
desktop-install/: index.html
docs/: backends.md  cli.md  desktop-install.md  index.md  installation.md  keyboard.md  output.md  quickstart.md  roadmap-libei.md  tray.md
installation/: index.html
output/: index.html
quickstart/: index.html
roadmap-libei/: index.html
scribe/: app.py  audio.py  dialog.py  install_desktop.py  keyboard.py  menu.py  models.py  output.py  session.py  streamer.py  util.py
scribe/backends/: __init__.py  groq.py  openai_api.py  openai_realtime.py  vosk.py  whisper.py  whisper_futo.py
scribe/typers/: __init__.py  base.py  eitype.py  pynput.py  wtype.py  ydotool.py
scripts/: bench_whisper_local.py
search/: search_index.json
templates/: scribe.desktop
tests/: test_backend_matrix.py  test_clip_silence_trim.py  test_clipboard_backend.py  test_compose_prompt.py  test_debug_logging.py  test_openai_realtime_coalesce.py  test_output.py  test_output_file_picker.py  test_prompt_file_picker.py  test_pseudo_streaming.py  test_typers_ascii_fallback.py  test_whisper_futo.py
tray/: index.html
voskrealtime/: audio.py  keyboard.py  models.py  models.toml  saverecording.py  streamer.py  util.py
