[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scribe-cli"
dynamic = ["version"]
description = "Speech-to-text CLI and system-tray app for dictating into any focused window. Local (vosk, faster-whisper) or cloud (groq, openai) backends, batch or streaming."
authors = [
    { name="Mahé Perrette", email="mahe.perrette@gmail.com" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "sounddevice",
    "tqdm",
    "requests",
    "pyperclip",
    "unidecode",
    "termcolor",
    "platformdirs",
    "desktop-ai-core>=0.2.0",
]

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

keywords = [
    "speech-to-text",
    "speech recognition",
    "transcription",
    "dictation",
    "voice-typing",
    "voice-to-text",
    "realtime",
    "streaming",
    "language",
    "AI",
    "local",
    "API",
    "cli",
    "tray",
    "vosk",
    "whisper",
    "openai",
    "groq",
    "gpt-4o",
    "linux",
    "wayland",
    "keyboard",
    "clipboard",
]

[project.optional-dependencies]
keyboard = ["pynput"]
whisper = ["faster-whisper"]
whisper-futo = ["pywhispercpp"]
vosk = ["vosk"]
app = ["pystray", "PyGObject"]
openai = ["openai>=2.37.0,<3", "soundfile"]
groq = ["openai>=2.37.0,<3", "soundfile"]
vad = ["silero-vad"]
all = ["pynput", "faster-whisper", "pywhispercpp", "openai>=2.37.0,<3", "soundfile", "vosk", "pystray", "silero-vad"]


[tool.setuptools]
packages = [ "scribe", "scribe_data" ]

[tool.setuptools_scm]
write_to = "scribe/_version.py"


[project.urls]
Homepage = "https://github.com/perrette/scribe"

[project.scripts]
scribe = "scribe.app:main"
scribe-install = "scribe.install_desktop:main"
