[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scribe-cli"
dynamic = ["version"]
description = "Speech-to-text CLI and system-tray app for dictating into any focused window. Local (vosk, faster-whisper) or cloud (groq, openai) backends, batch or streaming."
authors = [
    { name="Mahé Perrette", email="mahe.perrette@gmail.com" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "sounddevice",
    "tqdm",
    "requests",
    "pyperclip",
    "unidecode",
    "termcolor",
    "platformdirs",
    "desktop-ai-core>=0.2.0",
    # Runs the bundled silero VAD ONNX model (~2 MB shipped in scribe_data).
    # In base deps so silero is available out of the box — see scribe/audio.py.
    # `faster-whisper` already pulls it transitively, so installing with
    # [whisper] is free; standalone adds ~57 MB which is trivial for an STT tool.
    "onnxruntime",
]

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

keywords = [
    "speech-to-text",
    "speech recognition",
    "transcription",
    "dictation",
    "voice-typing",
    "voice-to-text",
    "realtime",
    "streaming",
    "language",
    "AI",
    "local",
    "API",
    "cli",
    "tray",
    "vosk",
    "whisper",
    "openai",
    "groq",
    "gpt-4o",
    "linux",
    "wayland",
    "keyboard",
    "clipboard",
]

[project.optional-dependencies]
keyboard = ["pynput"]
whisper = ["faster-whisper"]
whisper-futo = ["pywhispercpp"]
vosk = ["vosk"]
app = ["pystray", "PyGObject"]
openai = ["openai>=2.37.0,<3", "soundfile"]
groq = ["openai>=2.37.0,<3", "soundfile"]
# [vad] is now a no-op alias kept for back-compat (`pip install scribe-cli[vad]`
# was the documented install before onnxruntime moved into base deps).
vad = []
all = ["pynput", "faster-whisper", "pywhispercpp", "openai>=2.37.0,<3", "soundfile", "vosk", "pystray"]


[tool.setuptools]
packages = [ "scribe", "scribe_data" ]

[tool.setuptools.package-data]
scribe_data = ["share/*.png", "templates/*", "silero_vad.onnx", "silero_vad.LICENSE"]

[tool.setuptools_scm]
write_to = "scribe/_version.py"


[project.urls]
Homepage = "https://github.com/perrette/scribe"

[project.scripts]
scribe = "scribe.app:main"
scribe-install = "scribe.install_desktop:main"
